# _J.A.R.V.I.S_

./: README.md  tailwind.config.ts
backend/: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agent/: agent.py  tool_list.py
backend/app/route/: main.py
backend/app/services/: chatbot.py
backend/app/tools/: jokes.py
frontend/: index.html
frontend/src/components/: JarvisVoiceAssistant.tsx
frontend/src/types/: speech.d.ts
src/: index.css
src/pages/: Index.tsx
